--- a/src/css/winbox.less
+++ b/src/css/winbox.less
@@ -45,7 +45,7 @@
   will-change: scroll-position;
   background: #fff;
   /* when no border is set there is some thin line visible */
-  margin: -1px;
+  //margin: -1px;
   /* always prevent top border */
   margin-top: 0 !important;
   /*box-sizing: border-box;*/
@@ -139,8 +139,8 @@
 .wb-icon{
   float: right;
   height: 35px;
-  max-width: 120%;
-  padding: 0 2px;
+  max-width: 110%;
+  padding: 0 1px;
   text-align: center;
 }
 
@@ -199,6 +199,12 @@
   /*
   .wb-body > * {
     display: none;
+  }
+  */
+  // hide box-shadow when minimized?
+  /*
+  & {
+    box-shadow: none;
   }
   */
   .wb-full,
